dumper1.yaml
# Copyright 2019 The Knative Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# This is a very simple Knative Service that writes the input request to its log.
apiVersion: apps/v1
kind: Deployment
metadata:
  name: message-dumper1
spec:
  selector:
    matchLabels:
      app: message-dumper1
  template:
    metadata:
      labels:
        app: message-dumper1
    spec:
      containers:
      - name: user-container1
        image: github.com/knative/eventing-sources/cmd/message_dumper
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: message-dumper1
spec:
  selector:
    app: message-dumper1
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080

# apiVersion: serving.knative.dev/v1alpha1
# kind: Service
# metadata:
#   name: message-dumper
#   namespace: default
# spec:
#   runLatest:
#     configuration:
#       revisionTemplate:
#         spec:
#           container:
#             image: github.com/knative/eventing-sources/cmd/message_dumper
