sources_v1alpha2_kafka_container_source1.yaml
apiVersion: sources.eventing.knative.dev/v1alpha1
kind: ContainerSource
metadata:
  name: my-kafka-source1
spec:
  image: github.com/knative/eventing-sources/contrib/kafka-container-source/cmd
  args: 
    - '--bootstrap=9.59.193.46:9092'
    - '--topic=test'
sink:
  apiVersion: v1
  kind: Service
  name: message-dumper1
